# tessera

./: .gitignore  .kin  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SPEC.md
crates/tessera/: Cargo.toml
crates/tessera-chain/: Cargo.toml
crates/tessera-chain/src/: lib.rs
crates/tessera-core/: Cargo.toml
crates/tessera-core/src/: crypto.rs  error.rs  lib.rs  types.rs
crates/tessera-engine/: Cargo.toml
crates/tessera-engine/src/: eval.rs  lib.rs  runtime.rs  validate.rs
crates/tessera-format/: Cargo.toml
crates/tessera-format/src/: lib.rs
crates/tessera-wasm/: Cargo.toml
crates/tessera-wasm/src/: lib.rs
crates/tessera/src/: main.rs
docs/: chess.html  contract.html  index.html
examples/chess/: Cargo.toml
examples/chess/src/: board.rs  main.rs  validator.rs
examples/contract/: Cargo.toml
examples/contract/src/: main.rs  validator.rs
