[package]
name = "tessera-format"
description = "JSON and CBOR serialization for Tessera documents"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
tessera-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
