[package]
name = "tessera"
description = "CLI for creating, validating, and inspecting Tessera documents"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "tessera"
path = "src/main.rs"

[dependencies]
tessera-core = { workspace = true }
tessera-format = { workspace = true }
tessera-chain = { workspace = true }
tessera-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
